--- a/styles/northem-dark.less
+++ b/styles/northem-dark.less
@@ -1,97 +1,92 @@
 /*
-#************************************************#
-#                  Northem Dark                  #
-#------------------------------------------------#
-#                  northem-dark                  #
-#                  version 1.0.0                 #
-#       http://arcticicestudio.com/Northem       #
-#                                                #
-#                Arctic Ice Studio               #
-#               Copyright (c) 2015               #
-#         development@arcticicestudio.com        #
-#                                                #
-#      Created : 2015-03-13 19:24 +0100 UTC      #
-#      Modified: 2015-05-23 20:14 +0100 UTC      #
-#************************************************#
++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark                    +
+project   northem-dark                    +
+file      northem-dark.less               +
+version   1.0.1                           +
+author    Arctic Ice Studio               +
+email     development@arcticicestudio.com +
+copyright Copyright (C) 2015-2016         +
+created   2015-03-13 19:24 UTC+0100       +
+modified  2016-01-26 12:14 UTC+0100       +
++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 Northem is a north-bluish dark color palette designed by Arctic Ice Studio.
 Optimized for syntax highlighting and UI projects.
 This is a darker and more blue-tinged variation.
 
+[Index]
+  (1) HEX
+  (2) RGB
+  (3) X11
+
 [Variations]
 Also available as:
-  "Northem"          (https://github.com/arcticicestudio/northem)
-  "Northem Light"    (in drafting)
+  "Northem"       (https://github.com/arcticicestudio/northem)
+  "Northem Light" (https://github.com/arcticicestudio/northem-light)
 
 [Projects]
 Based on this the following projects are available:
 
   Syntax
-    - "Northem Dark Atom Syntax"      (https://github.com/arcticicestudio/northem-dark-atom-syntax)
-    - "Northem Dark Eclipse Syntax"   (https://github.com/arcticicestudio/northem-dark-eclipse-syntax)
-    - "Northem Dark gedit"            (https://github.com/arcticicestudio/northem-dark-gedit)
-    - "Northem Dark Notepad++"        (https://github.com/arcticicestudio/northem-dark-notepadplusplus)
+    - "Northem Dark Atom Syntax"    (https://github.com/arcticicestudio/northem-dark-atom-syntax)
+    - "Northem Dark Eclipse Syntax" (https://github.com/arcticicestudio/northem-dark-eclipse-syntax)
+    - "Northem Dark gedit"          (https://github.com/arcticicestudio/northem-dark-gedit)
+    - "Northem Dark Notepad++"      (https://github.com/arcticicestudio/northem-dark-notepadplusplus)
 
   UI
-    - "Northem Dark Atom UI"     (https://github.com/arcticicestudio/northem-dark-atom-ui)
-    - "Northem Dark GTK"         (in drafting)
+    - "Northem Dark Atom UI" (https://github.com/arcticicestudio/northem-dark-atom-ui)
+    - "Northem Dark GTK"     (in drafting)
 
 Visit http://arcticicestudio.com/Northem (actually under construction) for more informations.
 
 [File Formats]
-Northem Dark is available in many file formats:
+Northem is available in many file formats:
   Non-Native
-    - LESS        .less
-    - SASS        .scss
-    - JSON        .json
-    - XML         .xml
-    - Markdown    .md
-    - Java        .java
-  *Native*
-    - GIMP/Inkscape Palette       .gcl
-    - Adobe Swatch Exchange       .ase
-    - Alias/WaveFront Material    .mtl
-    - Gpick Palette               .gpa
+    - LESS     .less
+    - Sass     .scss
+    - JSON     .json
+    - XML      .xml
+  Native
+    - GIMP/Inkscape Palette    .gcl
+    - Adobe Swatch Exchange    .ase
+    - Alias/WaveFront Material .mtl
+    - Gpick Palette            .gpa
 
 [Version]
-LATEST:
-  - stable:     1.0.0 (https://github.com/arcticicestudio/northem-dark/releases/tag/1.0.0)
-  - snapshot:   /
+1.0.1 (https://github.com/arcticicestudio/northem-dark/releases/latest)
 
-state: indev
-
-For variations or older versions check out the GitHub Repository (https://github.com/arcticicestudio/northem-dark) and http://arcticicestudio.com/Northem (actually under construction).
+For older versions check out the GitHub Repository (https://github.com/arcticicestudio/northem-dark) and http://arcticicestudio.com/Northem (actually under construction).
 
 [Changelog]
 Check out the "CHANGELOG.md" or visit the GitHub Repository (https://github.com/arcticicestudio/northem-dark) and http://arcticicestudio.com/Northem (actually under construction).
 
 [Development]
-Please report bugs and suggestions for improvements at TODO.
+Please report bugs and suggestions for improvements at https://github.com/arcticicestudio/northem-dark/issues.
 
 [Recommendations]
-Recommended fonts are:
+Fonts:
   Syntax
     "Source Code Pro" (https://typekit.com/fonts/source-code-pro) (GitHub Repository: https://github.com/adobe-fonts/source-code-pro)
   UI
     "Roboto" (http://www.google.com/fonts/specimen/Roboto) (GitHub Repository: https://github.com/google/fonts/tree/master/apache/roboto)
 
-[License]
-Copyright (C) 2015 Arctic Ice Studio
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
 
+[License]
 Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
 Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
 
 [References]
-LESS:   http://lesscss.org
-X11:    /usr/share/X11/rgb.txt
+LESSCSS  (http://lesscss.org)
+Sass     (http://sass-lang.com)
+X11:     (file:///usr/share/X11/rgb.txt)
 */
-
-/*
- * =======
- * = HEX =
- * =======
- */
+/* +----------------------------------------------------------------------------+
+   + HEX                                                                    [1] +
+   +----------------------------------------------------------------------------+ */
 @darkest-coal:  #1F1F23;
 @dark-coal:     #242429;
 @coal:          #29292E;
@@ -109,12 +104,11 @@ X11:    /usr/share/X11/rgb.txt
 @orange:        #F0A06F;
 @lime:          #C9CC78;
 @purple:        #C2A1CA;
+/* +------------------------------------------------------------------------[1]-+ */
 
-/*
- * =======
- * = RGB =
- * =======
- */
+/* +----------------------------------------------------------------------------+
+   + RGB                                                                    [2] +
+   +----------------------------------------------------------------------------+ */
 @rgb-darkest-coal:  rgb(31,31,35);
 @rgb-dark-coal:     rgb(36,36,41);
 @rgb-coal:          rgb(41,41,46);
@@ -132,12 +126,11 @@ X11:    /usr/share/X11/rgb.txt
 @rgb-orange:        rgb(240,160,111);
 @rgb-lime:          rgb(201,204,120);
 @rgb-purple:        rgb(194,161,202);
+/* +------------------------------------------------------------------------[1]-+ */
 
- /*
-  * =======
-  * = X11 =
-  * =======
-  */
+/* +----------------------------------------------------------------------------+
+   + X11                                                                    [3] +
+   +----------------------------------------------------------------------------+ */
 @x11-black_russian:  #1F1F23;
 @x11-dark_jaguar:    #242429;
 @x11-jaguar:         #29292E;
@@ -155,3 +148,4 @@ X11:    /usr/share/X11/rgb.txt
 @x11-tacao:          #F0A06F;
 @x11-deco:           #C9CC78;
 @x11-french_lilac:   #C2A1CA;
+/* +------------------------------------------------------------------------[3]-+ */
